[gd_scene load_steps=8 format=2]

[ext_resource path="res://data/Resources/Sprites/Ship/nave inimiga 16x16.png" type="Texture" id=1]
[ext_resource path="res://data/Scripts/Enemies/Enemy1.gd" type="Script" id=2]
[ext_resource path="res://data/Resources/Shaders/flash.shader" type="Shader" id=3]
[ext_resource path="res://data/Resources/Animations/Flash_enemy.anim" type="Animation" id=4]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/progress = 0.0
shader_param/flash_color = Color( 1, 1, 1, 1 )

[sub_resource type="CircleShape2D" id=1]
radius = 7.07107

[sub_resource type="CircleShape2D" id=2]
radius = 150.0

[node name="Enemy1" type="KinematicBody2D"]
script = ExtResource( 2 )
offset = 80.0

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -8, 5, -5, 7, -2, 8, 1, 8, 4, 7, 4, 8, 7, 8, 8, 6, 7, 0, 8, -7, 7, -8, 4, -8, 4, -7, 1, -8, -2, -8, -5, -7, -8, -5 )
disabled = true

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource( 2 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash_enemy = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Ship"

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
